--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 pydantic = "^2.7.2"
+graphviz = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
