--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
 name = "document-transformer"
-version = "0.1.1"
-description = ""
+version = "0.1.2"
+description = "Organize your document transformation pipeline. Define your components, this tool ensure traceability and organization. Reuse your work easily in other projects"
 authors = ["John Gonzalez <johngonzalezv@gmail.com>"]
 readme = "README.md"
+license = "MIT"
+repository = "https://github.com/johngonzalez/document-transformer"
+keywords = ["document", "transformer", "pipeline", "components", "reuse", "traceability", "organization"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
