--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "document-transformer"
-version = "0.1.3"
+version = "0.1.4"
 description = "Organize your document transformation pipeline. Define your components, this tool ensure traceability and organization. Reuse your work easily in other projects"
 authors = ["John Gonzalez <johngonzalezv@gmail.com>"]
 readme = "README.md"
@@ -12,6 +12,9 @@ keywords = ["document", "transformer", "pipeline", "components", "reuse", "trace
 python = "^3.9"
 pydantic = "^2.7.2"
 graphviz = "^0.20.3"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
